--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: beige;
+}
+
 div{
     margin-top: 50px;
     display: flex;
@@ -12,6 +16,8 @@ div{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     font-weight: 600;
+    border-radius: 8%;
+    background-color: rgb(247, 94, 255);
 }
 
 img{
